# pandoc-docx-pagebreak

./: README.md  pandoc-docx-newpage-filter.cabal  pandoc-docx-pagebreak-filter.cabal  pandoc-docx-pagebreak.cabal  pandoc-docx-pagebreak.hs  stack.yaml
