name:                pandoc-docx-newpage-filter
version:             0.1.0.0
build-type:          Simple
synopsis:            Adds new page and landscape sections support for DOCX
description:         A Pandoc filter that replaces paragraphs containing
                     `PAGEBREAK` and `PAGEBREAKLANDSCAPE` with the respective
                     Word components.
homepage:            https://github.com/alexstoick/pandoc-docx-newpage-filter#readme
license:             BSD3
license-file:        LICENSE
author:              Alexandru Stoica
maintainer:          Alexandru Stoica
copyright:           2017 Alexandru Stoica
category:            Text
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       pandoc-types >= 1.16 && < 1.18
  default-language:    Haskell2010

executable pandoc-docx-newpage-filter
  main-is:             pandoc-docx-newpage-filter.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, pandoc-docx-newpage-filter,
                       pandoc-types >= 1.16 && < 1.18
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pandoc-docx-newpage-filter
