name:                pandoc-docx-pagebreak-filter
version:             0.1.0.0
build-type:          Simple
synopsis:            Adds new page and landscape sections support for DOCX
description:         A Pandoc filter that replaces paragraphs containing
                     `PAGEBREAK` and `PAGEBREAKLANDSCAPE` with the respective
                     Word components.
homepage:            https://github.com/alexstoick/pandoc-docx-pagebreak-filter#readme
license:             BSD3
license-file:        LICENSE
author:              Alexandru Stoica
maintainer:          Alexandru Stoica
copyright:           2017 Alexandru Stoica
category:            Text
cabal-version:       >=1.10

library
  build-depends:       base >= 4.7 && < 5,
                       pandoc-types >= 1.16 && < 1.18
  default-language:    Haskell2010

executable pandoc-docx-pagebreak-filter
  main-is:             pandoc-docx-pagebreak-filter.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, pandoc-docx-pagebreak-filter,
                       pandoc-types >= 1.16 && < 1.18
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alexstoick/pandoc-docx-pagebreak-filter
